# clargs

./: .clang-format  .clang-tidy  .gitignore  ArgumentParser.hpp  CMakeLists.txt  LICENSE  Parser.hpp  README.md  amalgamate.py  main.cpp
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: clang-format.yml  clang-tidy-analysis.yml  clang-tidy-post-review-comments.yml  clang-tidy-review-analysis.yml  clang-tidy-review-post.yml  clang-tidy-review.yml  docs.yml  test.yml  tests.yml
docs/: _config.yml  index.md
docs/examples/: 01_basic.md  index.md
examples/: CMakeLists.txt
examples/01_basic/: CMakeLists.txt  main.cpp
examples/02_groups/: CMakeLists.txt  main.cpp
examples/02_singleton/: CMakeLists.txt  main.cpp
examples/basic/: main.cpp
examples/hello/: CMakeLists.txt  main.cpp
include/CLArgs/: Parser.hpp  argument_queue.hpp  assert.hpp  common_flags.hpp  common_options.hpp  concepts.hpp  core.hpp  flag.hpp  from_string.hpp  macro_api.hpp  misc.hpp  option.hpp  parse_value.hpp  parser.hpp  parser_builder.hpp  platform.hpp  singleton.hpp  string_literal.hpp  validators.hpp  value_container.hpp
scripts/: amalgamate.py  create_release.py  logger.py
tests/: CMakeLists.txt  argument_queue_tests.cpp  common.hpp  common_flags_tests.cpp  common_options_tests.cpp  parse_value_test.cpp  parse_value_tests.cpp  parser_builder_tests.cpp  parser_tests.cpp  test.cpp  test_utils.hpp  value_container_tests.cpp
tests/benchmark/: CMakeLists.txt  argument_queue_benchmarks.cpp
